@@ -43,6 +43,8 @@
     <lz4-compression.version>1.8.0</lz4-compression.version>
     <thrift.version>0.19.0</thrift.version>
     <annotation.version>1.3.5</annotation.version>
+    <slt.executor>dbsql</slt.executor>
+    <slt.token>dummy-token</slt.token>
   </properties>
   <dependencies>
     <dependency>
@@ -196,6 +198,25 @@
               --add-opens=java.base/java.nio=ALL-UNNAMED
               -Dnet.bytebuddy.experimental=true
             </argLine>
+          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>exec-maven-plugin</artifactId>
+          <version>1.2.1</version>
+          <configuration>
+            <executable>java</executable>
+            <arguments>
+              <argument>--add-opens=java.base/java.nio=ALL-UNNAMED</argument>
+              <argument>-classpath</argument>
+              <classpath />
+              <argument>com.databricks.jdbc.sqllogictest.SLTMain</argument>
+              <argument>-e</argument>
+              <argument>${slt.executor}</argument>
+              <argument>-p</argument>
+              <argument>${slt.token}</argument>
+            </arguments>
+            <classpathScope>test</classpathScope>
           </configuration>
         </plugin>
         <plugin>
